--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,14 @@
 				</md-content>
 			</div>
 		</div>
+
 		<!-- Angular Material Dependencies -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
+
+		<script src="/js/app.js"></script>
 	</body>
 </html>
