--- a/public/posts.html
+++ b/public/posts.html
@@ -31,16 +31,11 @@
 		</md-toolbar>
 		<div layout="row" flex>
 			<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
-				
+			
 			</md-sidenav>
-			<div layout="column" flex id="content" ng-app=>
+			<div layout="column" flex id="content">
 				<md-content layout="column" flex class="md-padding" ng-controller="PostsDataCtrl as pdCtrl">
-					<md-card ng-repeat="post in pdCtrl.posts">
-						<md-card-content>
-							<h2>{{post.data.title}}</h2>
-							<pre>{{post.data|json}}</pre>
-						</md-card-content>
-					</md-card>
+					<rm-post ng-repeat="post in pdCtrl.posts" post="post"></rm-post>
 				</md-content>
 			</div>
 		</div>
