--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="Posts">
+<html lang="en" ng-app="rmApp">
 	<head>
 		<meta name="viewport" content="initial-scale=1" />
 
@@ -17,10 +17,11 @@
 		<!-- Local stylesheets -->
 		<link rel="stylesheet" href="/css/style.css">
 
-		<!-- Local scripts -->
-		<script src="/js/app.js"></script>
-		<script src="posts.js"></script>
+		<!-- Local modules -->
+		<script src="/modules/rmApp/rmApp.js"></script>
+		<script src="/modules/rmPost/rmPost.js"></script>
 	</head>
+
 	<body layout="column" ng-controller="AppCtrl">
 		<md-toolbar layout="row">
 			<div class="md-toolbar-tools">
@@ -35,8 +36,7 @@
 			
 			</md-sidenav>
 			<div layout="column" flex id="content">
-				<md-content layout="column" flex class="md-padding" ng-controller="PostsDataCtrl as pdCtrl">
-					<rm-post ng-repeat="post in pdCtrl.posts" post="post"></rm-post>
+				<md-content layout="column" flex class="md-padding">
 				</md-content>
 			</div>
 		</div>
