--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 		<!-- Local modules -->
 		<script src="/modules/rmApp/rmApp.js"></script>
 		<script src="/modules/rmPost/rmPost.js"></script>
+		<script src="/modules/rmData/rmData.js"></script>
 	</head>
 
 	<body layout="column" ng-controller="AppCtrl">
@@ -28,7 +29,7 @@
 				<md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
 					<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
 				</md-button>
-				<h1>Hello World</h1>
+				<h1>Reddit Material</h1>
 			</div>
 		</md-toolbar>
 		<div layout="row" flex>
@@ -36,7 +37,8 @@
 			
 			</md-sidenav>
 			<div layout="column" flex id="content">
-				<md-content layout="column" flex class="md-padding">
+				<md-content layout="column" flex class="md-padding" ng-controller="apiCtrl">
+				<pre>{{apiRes|json}}</pre>
 				</md-content>
 			</div>
 		</div>
