Added recursive items, finalized much of the post design

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 		<!-- Angular stylesheets and fonts -->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-		<link rel="stylesheet" href="/bower/angular-material/angular-material.min.css">
+		<link rel="stylesheet" href="/bower/angular-material/angular-material.css">
 
 		<!-- Angular scripts and dependencies -->
 		<script src="/bower/angular/angular.min.js"></script>
@@ -22,6 +22,7 @@
 		<script src="/modules/rmPost/rmPost.js"></script>
 		<script src="/modules/rmData/rmData.js"></script>
 		<script src="/modules/rmDisplay/rmDisplay.js"></script>
+		<script src="/modules/RecursionHelper/RecursionHelper.js"></script>
 	</head>
 
 	<body layout="column" ng-controller="AppCtrl">
