--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 		<script src="/bower/angular-aria/angular-aria.min.js"></script>
 		<script src="/bower/angular-material/angular-material.min.js"></script>
 		<script src="/bower/angular-resource/angular-resource.min.js"></script>
+		<script src="/bower/angular-sanitize/angular-sanitize.min.js"></script>
 		<script src="/bower/moment/moment.js"></script>
+		<script src="/bower/showdown/compressed/Showdown.min.js"></script>
+		<script src="/bower/angular-markdown-directive/markdown.js"></script>
 
 		<!-- Local stylesheets -->
 		<link rel="stylesheet" href="/css/style.css">
@@ -23,6 +26,7 @@
 		<script src="/modules/rmPost/rmPost.js"></script>
 		<script src="/modules/rmData/rmData.js"></script>
 		<script src="/modules/rmDisplay/rmDisplay.js"></script>
+		<script src="/modules/rmComment/rmComment.js"></script>
 		<script src="/modules/RecursionHelper/RecursionHelper.js"></script>
 	</head>
 
