--- a/public/modules/rmComment/rmComment.html
+++ b/public/modules/rmComment/rmComment.html
@@ -1,9 +1,6 @@
 <div class="rm-comment">
 <h3>/u/{{comment.data.author}}&nbsp;&bull; {{comment.data.score}} Points&nbsp;&bull; {{comment.data.created_utc|timesince}}</h3>
-<btf-markdown>
-#Markdown Directive
-* it works
-</btf-markdown>
+<btf-markdown>{{comment.data.body}}</btf-markdown>
 </div>
 <pre>{{comment|json}}</pre>
 <md-divider></md-divider>
