--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
 
 		<!-- Local stylesheets -->
 		<link rel="stylesheet" href="/css/style.css">
-		<link rel="stylesheet" href="/modules/rmPost/rmPost.css">
 
 		<!-- Local modules -->
 		<script src="/modules/rmApp/rmApp.js"></script>
@@ -31,23 +30,19 @@
 	<body layout="column" ng-controller="AppCtrl">
 		<md-toolbar layout="row">
 			<div class="md-toolbar-tools">
-				<md-button ng-click="toggleSidenav('left')" hide-gt-md class="md-icon-button">
+				<md-button ng-click="toggleSidenav('left')" class="md-icon-button">
 					<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
 				</md-button>
 				<h1>Reddit Material</h1>
 			</div>
 		</md-toolbar>
 		<div layout="row" flex>
-			<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+			<md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
 			
 			</md-sidenav>
 			<div layout="column" flex id="content">
-				<md-content layout="column" flex class="md-padding" ng-controller="apiCtrl">
+				<md-content layout="column" flex ng-controller="apiCtrl">
 					<rm-display item="apiRes.data"></rm-display>
-
-					<md-divider></md-divider>
-
-					<pre>{{apiRes|json}}</pre>
 				</md-content>
 			</div>
 		</div>
