Icon tweaks (including actual up- and downvote icons!)

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 		<md-toolbar layout="row" class="md-primary">
 			<div class="md-toolbar-tools">
 				<md-button ng-click="toggleSidenav('left')" class="md-icon-button">
-					<md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+					<md-icon aria-label="Menu" md-svg-icon="navigation:ic_menu_24px"></md-icon>
 				</md-button>
 				<h1>Reddit Material</h1>
 			</div>
