--- a/public/modules/rmPost/rmPost.html
+++ b/public/modules/rmPost/rmPost.html
@@ -32,10 +32,10 @@
 			<span class="smalltext">{{post.data.num_comments}} comments</span>
 		</div>
 		<md-button class="md-icon-button">
-			<md-icon md-svg-icon="navigation:ic_expand_less_24px" aria-label="Upvote"></md-icon>
+			<md-icon md-svg-icon="reddit:upvote" aria-label="Upvote"></md-icon>
 		</md-button>
 		<md-button class="md-icon-button">
-			<md-icon md-svg-icon="navigation:ic_expand_more_24px" aria-label="Downvote"></md-icon>
+			<md-icon md-svg-icon="reddit:downvote" aria-label="Downvote"></md-icon>
 		</md-button>
 	</div>
 </md-card>
