--- a/public/test.html
+++ b/public/test.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html ng-app="testApp" ng-controller="testCtrl">
+<html ng-app="rmApp">
 <head>
 	<title>Test page</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-	<script src="/bower/angular/angular.min.js"></script>
-	<script src="/bower/angular-sanitize/angular-sanitize.min.js"></script>
-	<script type="text/javascript">
-	'use strict';
-	var app = angular.module('testApp', ['ngSanitize']);
+	<!-- Angular stylesheets and fonts -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+	<link rel="stylesheet" href="/bower/angular-material/angular-material.css">
 
-	app.controller('testCtrl', ['$scope', function($scope){
-		$scope.rawText = '[asdf](http://www.wikipedia.org)';
-	}]);
-	</script>
-	<style>
-	:root {
-		--bg-color: green;
-	};
-	body{
-		background-color: var(--bg-color);
-	}
-	</style>
+	<!-- Angular scripts and dependencies -->
+	<script src="/bower/angular/angular.min.js"></script>
+	<script src="/bower/angular-animate/angular-animate.min.js"></script>
+	<script src="/bower/angular-aria/angular-aria.min.js"></script>
+	<script src="/bower/angular-material/angular-material.min.js"></script>
+	<script src="/bower/angular-resource/angular-resource.min.js"></script>
+	<script src="/bower/angular-sanitize/angular-sanitize.min.js"></script>
+	<script src="/bower/moment/moment.js"></script>
+
+	<!-- Local stylesheets -->
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/theme.css">
+
+	<!-- Local modules -->
+	<script src="/modules/rmApp/rmApp.js"></script>
+	<script src="/modules/rmPost/rmPost.js"></script>
+	<script src="/modules/rmData/rmData.js"></script>
+	<script src="/modules/rmDisplay/rmDisplay.js"></script>
+	<script src="/modules/rmComment/rmComment.js"></script>
+	<script src="/modules/rmSections/rmSections.js"></script>
+	<script src="/modules/RecursionHelper/RecursionHelper.js"></script>
+
 </head>
 <body>
-<div class="container">
-<div class="row">
-	<div class="col-md-4">
-		<div class="panel panel-default">
-			<div class="panel-body">
-			</div>
-		</div>
-	</div>
-	<div class="col-md-4">
-		<div class="panel panel-default">
-			<div class="panel-body">
-			</div>
-		</div>
-	</div>
-</div>
-</div>
+	<rm-container>
+		<rm-section></rm-section>
+		<rm-section><rm-display redditurl="'/'"></rm-display></rm-section>
+	</rm-container>
 </body>
 </html>
